fix: window flicker (#3)
* wip

* fix: flicker while deleting

* fix: flicker

* feat: add app screenshot

* chore: memorize calculate function

--- a/src-web/src/styles/_editor-content.css
+++ b/src-web/src/styles/_editor-content.css
@@ -21,7 +21,11 @@
   --notes-token-diff-inserted: var(--color-green-500, #009432);
 
   :first-child {
-    @apply mt-0;
+    @apply mt-0!;
+  }
+
+  :last-child {
+    @apply mb-0!;
   }
 
   h1,
